# Chat

./: CMakeLists.txt  README.md  autoBuild.sh
SQL/: database.sql  test.sql
include/: public.h
include/server/: ChatServer.h  ChatService.h  OfflineMessageModel.h  User.hpp  UserModel.h
include/server/database/: Database.h
include/server/model/: FriendModel.h  Group.hpp  GroupModel.h  GroupUser.hpp  OfflineMessageModel.h  User.hpp  UserModel.h
include/server/redis/: Redis.h
src/client/: main.cpp
src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  OfflineMessageModel.cpp  UserModel.cpp  main.cpp
src/server/database/: Database.cpp
src/server/model/: FriendModel.cpp  GroupModel.cpp  OfflineMessageModel.cpp
src/server/redis/: Redis.cpp
